# ai-universe

./: README.md  main.py  pyproject.toml
agents/: 01-using-agents-with-the-api.py  README.md
agents/basics/: 01-using-agents-with-the-api.py
agents/research_crew/: pyproject.toml  report.md
agents/research_crew/src/research_crew/: crew.py
langchain/: 01-build-a-simple-llm-application.py  01-introduction.py  README.md
machine-learning/natural-language-processing/: 01-vector-models-and-text-processing.py
openai/: 03-using-tools.py
openai/basics/: 01-using-models-with-the-api.py  02-using-models-vision-capability.py
